# franka_robotiq

./: CMakeLists.txt  README.md  package.xml
description/: CMakeLists.txt
description/launch/: visualize.launch.py
description/meshes/collision/: zed_mini_part_1.stl  zed_mini_part_2.stl
description/urdf/: robot.urdf.xacro
franka_robotiq/: CMakeLists.txt  package.xml
franka_robotiq_description/: CMakeLists.txt  package.xml
franka_robotiq_description/launch/: visualize.launch.py
franka_robotiq_description/rviz/: visualize.rviz
franka_robotiq_description/urdf/: realsense_static.urdf.xacro  robot.urdf.xacro
franka_robotiq_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
franka_robotiq_moveit_config/config/: chomp_planning.yaml  joint_limits.yaml  lerp_planning.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.srdf.xacro  robotiq_gripper.xacro  ros2_controllers.yaml  ros2_controllers_mujoco.yaml  trajopt_planning.yaml
moveit_config/: .setup_assistant  CMakeLists.txt
moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  moveit_controllers.yaml  panda.srdf.xacro  robotiq_gripper.xacro
