<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_robotiq</name>
  <version>0.0.0</version>
  <description>A ROS 2 description package.</description>
  <maintainer email="peterdavidfagan@gmail.com">Peter David Fagan</maintainer>
  <license>Apache 2.0</license>
  <author>Peter David Fagan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

